"配置文件种类、优先级、读取"

--- a/Day01_SpringBootDemo/src/main/resources/config/application.properties
+++ b/Day01_SpringBootDemo/src/main/resources/config/application.properties
@@ -1,9 +1,8 @@
 # for server
 server.port=8080
 
-
 # for test
 com.thornBird.name = hymanhu
 com.thornBird.age = 44
 com.thornBird.desc = ${com.thornBird.name}---${com.thornBird.age}
-com.thornBird.random = ${random.value}
+com.thornBird.random = ${random.int[10,100]}
