"logback、多环境、热部署"

--- a/Day01_SpringBootDemo/pom.xml
+++ b/Day01_SpringBootDemo/pom.xml
@@ -38,6 +38,11 @@
 		    <scope>provided</scope>
 		</dependency> -->
 		
+		<!-- spring dev tools -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 		
 		<!-- test测试模块依赖 -->
 		<dependency>
