--- a/Day01_SpringBootDemo/src/main/resources/config/application.properties
+++ b/Day01_SpringBootDemo/src/main/resources/config/application.properties
@@ -1,6 +1,13 @@
 # for server
 server.port=8080
 
+# for env
+spring.profiles.active = dev
+
+# for dev tools
+spring.devtools.restart.enabled = true
+spring.devtools.restart.additional-paths=src/main/java
+
 # for test
 com.thornBird.name = hymanhu
 com.thornBird.age = 44
