--- a/Day01_SpringBootDemo/src/main/resources/config/application.properties
+++ b/Day01_SpringBootDemo/src/main/resources/config/application.properties
@@ -1,5 +1,6 @@
 # for server
-server.port=8080
+server.port=443
+server.http.port=80
 
 # for env
 spring.profiles.active = dev
@@ -7,6 +8,10 @@ spring.profiles.active = dev
 # for dev tools
 spring.devtools.restart.enabled = true
 spring.devtools.restart.additional-paths=src/main/java
+
+# for ssl
+server.ssl.key-store=classpath:.keystore
+server.ssl.key-password=111111
 
 # for test
 com.thornBird.name = hymanhu
