--- a/Day01_SpringBootDemo/src/main/resources/config/application.properties
+++ b/Day01_SpringBootDemo/src/main/resources/config/application.properties
@@ -9,6 +9,31 @@ spring.profiles.active = dev
 spring.devtools.restart.enabled = true
 spring.devtools.restart.additional-paths=src/main/java
 
+# for data source
+# mysql 5
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# mysql 6 +
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=123456
+
+# hikari pool
+# 连接池的最大连接数，默认是10
+spring.datasource.hikari.maximum-pool-size=20
+# 最小空闲连接数量
+spring.datasource.hikari.minimum-idle=5
+# 空闲连接存活最大时间，默认600000（十分钟）
+spring.datasource.hikari.idle-timeout=180000
+# 自动提交
+spring.datasource.hikari.auto-commit=true
+
+# for mybatis
+# 开启驼峰法
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.hqyj.SpringBootDemo.modules.*.entity
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+
 # for ssl
 server.ssl.key-store=classpath:.keystore
 server.ssl.key-password=111111
