"Jpa/自动生成表功能"

--- a/Day01_SpringBootDemo/src/main/resources/config/application.properties
+++ b/Day01_SpringBootDemo/src/main/resources/config/application.properties
@@ -38,6 +38,12 @@ mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 server.ssl.key-store=classpath:.keystore
 server.ssl.key-password=111111
 
+# for jpa
+# 动态生成表策略
+spring.jpa.hibernate.ddl-auto=update
+# 指定数据库表的引擎为InnoDB，支持事务
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
 # for test
 com.thornBird.name = hymanhu
 com.thornBird.age = 44
