--- a/Day01_SpringBootDemo/src/main/resources/config/application.properties
+++ b/Day01_SpringBootDemo/src/main/resources/config/application.properties
@@ -44,6 +44,32 @@ spring.jpa.hibernate.ddl-auto=update
 # 指定数据库表的引擎为InnoDB，支持事务
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
+# for Redis
+# redis数据库索引（默认为0）
+spring.redis.database=0
+# redis服务器地址
+spring.redis.host=127.0.0.1
+# redis服务器连接端口
+spring.redis.port=6379
+# redis服务器连接密码（默认为空）
+spring.redis.password=11
+# 连接超时时间（毫秒）
+spring.redis.timeout=300
+
+# for Lettuce
+# Lettuce缓存连接池
+# 连接池最大连接数（使用负值表示满意限制）
+spring.redis.lettuce.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.lettuce.pool.max-wait=10000
+# 连接池中的最大空闲连接
+spring.redis.lettuce.pool.max-idle=8
+# 连接池中的最小空闲连接
+spring.redis.lettuce.pool.min-idle=0
+# 关闭超时时间
+spring.redis.lettuce.shutdown-timeout=100
+
+
 # for test
 com.thornBird.name = hymanhu
 com.thornBird.age = 44
