--- a/Day01_SpringBootDemo/pom.xml
+++ b/Day01_SpringBootDemo/pom.xml
@@ -92,6 +92,14 @@
 		    <artifactId>commons-lang3</artifactId>
 		</dependency>
 		
+		<!-- thymeleaf -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-thymeleaf</artifactId>
+		    <!-- <version>2.3.0.RELEASE</version> -->
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
