--- a/Day01_SpringBootDemo/src/main/resources/config/application.properties
+++ b/Day01_SpringBootDemo/src/main/resources/config/application.properties
@@ -46,29 +46,38 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # for Redis
 # redis数据库索引（默认为0）
-spring.redis.database=0
-# redis服务器地址
-spring.redis.host=127.0.0.1
-# redis服务器连接端口
-spring.redis.port=6379
-# redis服务器连接密码（默认为空）
-spring.redis.password=111111
-# 连接超时时间（毫秒）
-spring.redis.timeout=300
+#spring.redis.database=0
+## redis服务器地址
+#spring.redis.host=127.0.0.1
+## redis服务器连接端口
+#spring.redis.port=6379
+## redis服务器连接密码（默认为空）
+#spring.redis.password=111111
+## 连接超时时间（毫秒）
+#spring.redis.timeout=300
 
 # for Lettuce
 # Lettuce缓存连接池
 # 连接池最大连接数（使用负值表示满意限制）
-spring.redis.lettuce.pool.max-active=8
-# 连接池最大阻塞等待时间（使用负值表示没有限制）
-spring.redis.lettuce.pool.max-wait=10000
-# 连接池中的最大空闲连接
-spring.redis.lettuce.pool.max-idle=8
-# 连接池中的最小空闲连接
-spring.redis.lettuce.pool.min-idle=0
-# 关闭超时时间
-spring.redis.lettuce.shutdown-timeout=100
+#spring.redis.lettuce.pool.max-active=8
+## 连接池最大阻塞等待时间（使用负值表示没有限制）
+#spring.redis.lettuce.pool.max-wait=10000
+## 连接池中的最大空闲连接
+#spring.redis.lettuce.pool.max-idle=8
+## 连接池中的最小空闲连接
+#spring.redis.lettuce.pool.min-idle=0
+## 关闭超时时间
+#spring.redis.lettuce.shutdown-timeout=100
 
+# for thymeleaf
+# 实现页面热部署，生产环境true
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML5
+# 设置模版文件前缀后缀
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 
 # for test
 com.thornBird.name = hymanhu
