--- a/Day01_SpringBootDemo/src/main/resources/config/application.properties
+++ b/Day01_SpringBootDemo/src/main/resources/config/application.properties
@@ -79,6 +79,13 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+# for upload file size
+#spring.servlet.multipart.maxFileSize=30MB
+#spring.servlet.multipart.maxRequestSize=30MB
+# -1 是没有兆数限制
+spring.servlet.multipart.maxFileSize=-1
+spring.servlet.multipart.maxRequestSize=-1
+
 # for test
 com.thornBird.name = hymanhu
 com.thornBird.age = 44
