"静态资源文件夹配置"

--- a/Day01_SpringBootDemo/src/main/resources/config/application.properties
+++ b/Day01_SpringBootDemo/src/main/resources/config/application.properties
@@ -86,6 +86,12 @@ spring.thymeleaf.suffix=.html
 spring.servlet.multipart.maxFileSize=-1
 spring.servlet.multipart.maxRequestSize=-1
 
+# spring local resource config
+# spring的本地资源配置
+spring.source.path = /wenjianUpload/**
+spring.source.folder.windows = d:/wenjianUpload/
+spring.source.folder.linux = /wenjianUpload/
+
 # for test
 com.thornBird.name = hymanhu
 com.thornBird.age = 44
