"重构上传文件、文件下载、端点监控"

--- a/Day01_SpringBootDemo/src/main/resources/config/application.properties
+++ b/Day01_SpringBootDemo/src/main/resources/config/application.properties
@@ -88,9 +88,14 @@ spring.servlet.multipart.maxRequestSize=-1
 
 # spring local resource config
 # spring的本地资源配置
-spring.source.path = /wenjianUpload/**
+spring.source.path = /wenjianUpload/
+spring.source.path.pattern = /wenjianUpload/**
 spring.source.folder.windows = d:/wenjianUpload/
 spring.source.folder.linux = /wenjianUpload/
+
+# for actuator
+# localhost:8080/actuator/xxx
+management.endpoints.web.exposure.include=*
 
 # for test
 com.thornBird.name = hymanhu
