--- a/Day01_SpringBootDemo/pom.xml
+++ b/Day01_SpringBootDemo/pom.xml
@@ -99,6 +99,11 @@
 		    <!-- <version>2.3.0.RELEASE</version> -->
 		</dependency>
 		
+		<!-- actuator 监控 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 		
 	</dependencies>
 
