--- a/Day01_SpringBootDemo/src/main/resources/config/application.properties
+++ b/Day01_SpringBootDemo/src/main/resources/config/application.properties
@@ -97,6 +97,9 @@ spring.source.folder.linux = /wenjianUpload/
 # localhost:8080/actuator/xxx
 management.endpoints.web.exposure.include=*
 
+# for shiro
+shiro.web.enabled=true
+
 # for test
 com.thornBird.name = hymanhu
 com.thornBird.age = 44
