"实现微服务之间的接口调用、注册中心的认证、自我保护机制、将注册中心中的一个微服务注册成为一个集群，进行负载均衡"

--- a/sc_client_site/src/main/resources/application.properties
+++ b/sc_client_site/src/main/resources/application.properties
@@ -1,22 +1,22 @@
-server.port=8762
+server.port=8763
 # 名字不能用下划线
-spring.application.name=client-account
+spring.application.name=client-site
 # 设置hostname
 eureka.instance.hostname=localhost
 # 注册中心的地址
 eureka.client.serviceUrl.defaultZone=http://root:root@${eureka.instance.hostname}:8760/eureka/
 
 # 每间隔1s，向服务端发送一次心跳，证明自己依然存活
-eureka.instance.leaseRenewalIntervalInseconds=1
+#eureka.instance.leaseRenewalIntervalInseconds=1
 # 告诉服务端，如果我3s之内没有给你发心跳，就代表我死了，将我剔除掉
-eureka.instance.leaseExpirationDurationInSeconds=3
+#eureka.instance.leaseExpirationDurationInSeconds=3
 
 # for log
 logging.config = classpath:logback-dev.xml
 
 # for dev tools
-spring.devtools.restart.enabled = true
-spring.devtools.restart.additional-paths=src/main/java
+#spring.devtools.restart.enabled = true
+#spring.devtools.restart.additional-paths=src/main/java
 
 # for data source
 # mysql 5
@@ -40,4 +40,3 @@ spring.datasource.hikari.auto-commit=true
 # for mybatis
 # 开启驼峰法
 mybatis.configuration.map-underscore-to-camel-case=true
-
