--- a/sc_register/src/main/resources/application.properties
+++ b/sc_register/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 # 设置注册中心的端口
 server.port=8760
+
+# for security
+spring.security.user.name=root
+spring.security.user.password=root
+
+# 关闭Eureka 注册中心自我保护机制
+eureka.server.enable-self-preservation=false
+
 # for eureka server config
 # 给注册中心取名
 eureka.instance.hostname=localhost
