--- a/sc_client_account/src/main/resources/application.properties
+++ b/sc_client_account/src/main/resources/application.properties
@@ -11,10 +11,14 @@ eureka.instance.leaseRenewalIntervalInseconds=1
 # 告诉服务端，如果我3s之内没有给你发心跳，就代表我死了，将我剔除掉
 eureka.instance.leaseExpirationDurationInSeconds=3
 
+# for feign hystrix ‐‐‐‐ 开启 Hystrix 断路器
+feign.hystrix.enabled=true
+
 # for log
 logging.config = classpath:logback-dev.xml
 
 # for dev tools
+spring.devtools.livereload.port=35731
 spring.devtools.restart.enabled = true
 spring.devtools.restart.additional-paths=src/main/java
 
